# SigilVM

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Readme.md  build.sh
apps/: Readme.md  dice.cpp  dotexe.cpp  editor-legacy.cpp  editor.cpp  player.cpp  tools.cpp  xorit.cpp
assets/: CMakeLists.txt  Readme.md
assets/scripts/: dotexe.sh  organizer.sh  probe-audio.sh  toggle-opacity.sh  wallpaperctl.sh
assets/shaders/: cshader-example-frag.h  cshader-example-vert.h  cshader-vulkan-tutorial-frag.h  cshader-vulkan-tutorial-vert.h  dreamcolor.frag  vulkan-tutorial.frag.u32  vulkan-tutorial.vert.u32
assets/web/: index.html
cmake/: Applications.cmake  BuildFlags.cmake  ClangTidy.cmake  Dependencies.cmake  Options.cmake  Paths.cmake  Sources.cmake  Targets.cmake  Testing.cmake  Valgrind.cmake  bootstrap.cmake  compiler.cmake  options.cmake  paths.cmake  summary.cmake  targets.cmake  version.cmake
docs/: api.md  apps.md  build.md  install.md  packaging.md  themes.md
include/core/: debug.h  hash.h  status.h  strings.h  time.h  vector.h  version.h
include/modules/: todo-glfw.h
include/platform/: capabilities.h  fs.h  process.h
include/runtime/: app.h  commands.h  crypto.h  peu.h  tty.h  window.h
include/sigil/: common.h  debug.h  macros.h  platform.h  status.h  version.h
pkg/: Readme.md  sigilvm-core copy.PKGBUILD  sigilvm-core.PKGBUILD  sigilvm-desktop.PKGBUILD  sigilvm-extra.PKGBUILD
scripts/: build.sh  package.sh
src/: CMakeLists.txt
src/core/: assets.h  env.cpp  env.h  events.cpp  events.h  fs.h  math.h  memory.cpp  memory.h  modules.cpp  modules.h  networking.h  parser.h  runtime.cpp  runtime.h  sources.generated.cmake  target.h  utils.cpp  utils.h  work.cpp  work.h
src/data/: dedup.cpp  fileinfo.cpp  identity.cpp  project.cpp
src/format/: strings.cpp
src/game/: character_state.cpp  dice.cpp  initiative.cpp
src/hid/: hid.cpp  hid.h
src/math/: xxh128.cpp
src/media/: context.cpp
src/memory/: xor.cpp
src/modules/: CMakeLists.txt  compat.cpp  desktop.cpp
src/network/: context.cpp
src/ntt/: components.cpp  game-components.h  general-components.h  graphic-components.h  hat.cpp  hat.h  ntt.cpp  ntt.h  physics.h  scene_builder.h  spawner.h
src/platform/: CMakeLists.txt  app.cpp  compat.cpp  desktop.cpp  exec.cpp  filesystem.cpp  fs.cpp  (+3 more)
tests/: encoding.cpp  memory.cpp  peu.cpp  vector.cpp
tools/: build.sh  generate-sources-cmake.py
(+155 files in other folders)
